--- a/steeleagle-optimization.tex
+++ b/steeleagle-optimization.tex
@@ -481,6 +481,7 @@ frame.
 \label{sec:measurements}
 
 \subsubsection{Observe$_{ab}$}
+\label{sec:onion-observe-ab}
 
 \begin{figure}[htbp]
     \centering
