--- a/voxl.tex
+++ b/voxl.tex
@@ -341,6 +341,7 @@ average about 180 KB when encoded as JPEG, requiring 43.2 Mbps bandwidth to
 send frames at 30 frames per second.
 
 \begin{table}
+    \centering
     \begin{tabular}{llll}
         \toprule
         \textbf{Frame details} & \textbf{Frame size (KB)} & \textbf{Latency (ms)} & \textbf{Achievable FPS}\\
