--- a/steeleagle-optimization.tex
+++ b/steeleagle-optimization.tex
@@ -541,6 +541,7 @@ a p99 of 59 ms. The throughput measured on the link using \texttt{iperf} has a
 mean of 16.25 Mbps, with a standard deviation of 1 Mbps and a p1 of 14.36 Mbps.
 
 \subsubsection{Orient+Decide$_d$}
+\label{sec:onion-orient-decide-d}
 
 \begin{figure}[htbp]
     \centering
@@ -621,6 +622,7 @@ p99 of 49 ms. The throughput has a mean of 28 Mbps, with a standard deviation
 of 3.66 Mbps and a p1 of 19 Mbps.
 
 \subsubsection{Act$_{fg}$}
+\label{sec:onion-act-fg}
 
 \begin{wrapfigure}[12]{r}{0.3\linewidth}
 \centering
