--- a/steeleagle-optimization.tex
+++ b/steeleagle-optimization.tex
@@ -480,7 +480,7 @@ frame.
 \subsection{Measurements}
 \label{sec:measurements}
 
-\subsubsection{Observe$_{ab}$}
+\subsubsection{\texorpdfstring{Observe$_{ab}$}{Observe\_ab}}
 \label{sec:onion-observe-ab}
 
 \begin{figure}[htbp]
@@ -510,7 +510,7 @@ measured in frames per second (fps), using the time taken for a new frame to be
 transmitted by the drone. It has a mean of 31 fps, with a standard deviation of
 5 fps and a p1 of 22 fps.
 
-\subsubsection{Observe$_c$}
+\subsubsection{\texorpdfstring{Observe$_c$}{Observe\_c}}
 
 \begin{figure}[htbp]
     \centering
@@ -540,7 +540,7 @@ Observe$_c$ has a mean latency of 39 ms, with a standard deviation of 8 ms, and
 a p99 of 59 ms. The throughput measured on the link using \texttt{iperf} has a
 mean of 16.25 Mbps, with a standard deviation of 1 Mbps and a p1 of 14.36 Mbps.
 
-\subsubsection{Orient+Decide$_d$}
+\subsubsection{\texorpdfstring{Orient+Decide$_d$}{Orient+Decide\_d}}
 \label{sec:onion-orient-decide-d}
 
 \begin{figure}[htbp]
@@ -586,7 +586,7 @@ indication of the frame rate that the decoding software can sustain on our
 cloudlet hardware. The throughput has a mean of 37 fps with a standard
 deviation of 17 fps and a p1 of 17 fps.
 
-\subsubsection{Act$_e$}
+\subsubsection{\texorpdfstring{Act$_e$}{Act\_e}}
 
 \begin{figure}[htbp]
     \centering
@@ -621,7 +621,7 @@ The latency has a mean of 30 ms, with a standard deviation of 4.22 ms and a
 p99 of 49 ms. The throughput has a mean of 28 Mbps, with a standard deviation
 of 3.66 Mbps and a p1 of 19 Mbps.
 
-\subsubsection{Act$_{fg}$}
+\subsubsection{\texorpdfstring{Act$_{fg}$}{Act\_fg}}
 \label{sec:onion-act-fg}
 
 \begin{wrapfigure}[12]{r}{0.3\linewidth}
